Sitne izmjene na pocetoj stranici